Swagger - basic /login and /me
